src/test/fail/function_redeclare.ly
<@lily function f():nil {} function f():nil {} @>
